--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8001",
+  "proxy": "http://host.docker.internal:8001",
   "eslintConfig": {
     "extends": [
       "react-app",
