--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.5.0",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
